--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,8 +21,16 @@
 	^3	GLOBAL CLASSES 
 	
 	^4	STRUCTURE
-	    ^4a core
-	    ^4b home
+	
+	    ^4a CORE
+	        ^4a1 masthead
+	        ^4a2 navigation
+	        ^4a3 footer
+	        ^4a4 sitemap
+	        
+	    ^4b HOME
+
+  ^5  TEXT
 
 
 /*	^1 IMPORTS
@@ -77,7 +85,12 @@
       &:hover {
         background-color : $LightBlack;
       }  
-    }
+  }
+  
+  @mixin resetSpacing {
+    padding : 0;
+    margin : 0;
+  }
 
 /* ^3	GLOBAL CLASSES
 *************************************************************************/
@@ -158,26 +171,35 @@
     background : $White;
   }
   
+  #content {
+    min-height : 400px; // might need removing to resolve sidebar height conflicts
+  }
+  
+  #push {
+    height : $StickyHeight;
+  }
+  
+  // ^4a1 masthead
   #masthead {
     height : 125px;
     background : $White;
-  }
-  
-  #masthead h1 {
-    height : 80px;
-    width : 190px;
-    padding : 10px 20px;
-    margin : 0;
-    float : left;
+    
+    h1 {
+        height : 80px;
+        width : 190px;
+        padding : 10px 20px;
+        margin : 0;
+        float : left;
+        
+        a {
+            display : block;
+            height : 80px;
+            width : 190px;
+            background : url(../img/sprite.png) no-repeat 0px 10px;
+        }        
+     }
   }
 
-  #masthead h1 a {
-    display : block;
-    height : 80px;
-    width : 190px;
-    background : url(../img/sprite.png) no-repeat 0px 10px;
-  }
-  
   #header {
     height : 100px;
     width : 790px;
@@ -187,51 +209,51 @@
   #smallLinks {
     height : 30px;
     padding-right : 10px;
-  }
-  
-  #smallLinks ul {
-    display : inline;
-    float : right;
-    margin : 0;
-    padding : 0;
-    list-style : none;
-  }
-  
-  #smallLinks > ul > li {
-    height : 10px;
-    padding : 10px;
-    float : left;
-    font-size : $GlobalLinkSize;
-    font-weight: 600;
-    border-left : 1px dotted $MediumBlack;
-    color : $MediumBlack;
-
-    a {
-      color : $MediumBlack;
-      &:hover {
-        color : $Orange;
-      }
+    
+    ul {
+      list-style : none;
+      @include resetSpacing;
     }
+    
+    > ul {
+      float : right;
+
+      > li {
+        display : inline;
+        height : 10px;
+        padding : 10px;
+        font-size : $GlobalLinkSize;
+        font-weight: 600;
+        border-left : 1px dotted $MediumBlack;
+        color : $MediumBlack;
+        
+        a {
+          color : $MediumBlack;
+          &:hover {
+            color : $Orange;
+          }
+        }
+      }
+    }    
   }
-  
-  ul#socialLinks {
-    height : 20px;
+
+  #socialLinks {
     display : inline-block;
     position : relative;
-    top : -3px;
-  }
-  
-  #socialLinks li {
-    height : 20px;
-    width : 20px;
-    float : left;
-    margin-left : 5px;
-  }
-  
-  #socialLinks li a {
-    display : block;
-    height : 20px;
-    width : 20px;
+    top : 6px;
+
+    li {
+      height : 20px;
+      width : 20px;
+      float : left;
+      margin-left : 5px;
+      
+      a {
+        display : block;
+        height : 20px;
+        width : 20px;
+      }
+    }
   }
   
   .linkedin {
@@ -259,94 +281,161 @@
     width : 220px;
     float : right;
     padding-top : $GlobalPadding;
+
+    input[type=text] {
+      @include formFields;
+      width : 165px;
+      float : left;
+      background : $UltraLightBlack;
+    }
   }
   
-  #search-form input[type=text] {
-    @include formFields;
-    width : 165px;
-    float : left;
-    background : $UltraLightBlack;
-  }
-  
+  // ^4a2 navigation
   #nav {
     height : 25px;
     background : $DarkBlack;
     clear : both;
-  }
-  
-  #nav input[type=text] {
-    width : 185px;
-    float : left;
-    background : $MediumBlack;
-    color : $White;
-    @include formFields;
-    padding-left : 20px;
-  }
-  
-  #nav ul {
-    float : right;
-    margin : 0;
-    padding : 0;
-  }
-  
-  #nav ul li {
-    font-size : $GlobalLinkSize;
-    float : left;
-    margin : 0;
-    padding : 0;
     
-    a {
+    input[type=text] {
+      width : 185px;
+      float : left;
+      background : $MediumBlack;
       color : $White;
-      &:hover {
-        color : $Orange;
-      }
+      @include formFields;
+      padding-left : 20px;
     }
     
+    ul {
+      float : right;
+      @include resetSpacing;
+
+      li {
+          font-size : $GlobalLinkSize;
+          float : left;
+          @include resetSpacing;
+          
+          a {
+            display : inline-block;
+            margin : 0;
+            padding : 0.35em 1em;
+            color : $White;
+            &:hover {
+              color : $Orange;
+            }
+          }
+       }
+    } 
   }
-  
-  #nav ul li a {
-    display : inline-block;
-    margin : 0;
-    padding : 0.35em 1em;
-  }
-  
+
   .angels a {
     background : $Orange;
     &:hover {
         color : $DarkBlack !important;
     }
   }
-
-  #content {
-    min-height : 400px;
-  }
   
-  #push {
-    height : $StickyHeight;
-  }
-  
+  // ^4a3 footer
   #footer {
     height : $StickyHeight;
     width : $GlobalWidth; 
     margin : auto;
-    background : $Orange;  
+    background : $Orange;
+    
+    nav {
+      height : 175px;
+    }
+    
+    section {
+      height : 20px;
+      padding : 5px 0 0 1.75em;
+      background : $DarkBlack;
+      color : $White; 
+      
+      a {
+        color : $White; 
+        &:hover {
+          color : $Orange;
+        }      } 
+    } 
+    
+    h6 {
+      float : left;
+    } 
+    
+    p {
+      font-size : $GlobalLinkSize - 0.1;
+      margin : 0 0 10px 0 ;
+      color : $White;
+      
+      a {
+        color : $White;
+        &:hover {
+          color : $Black;
+        }
+      }
+    }
   }
   
+  // ^4a4 sitemap
   #sitemap {
-    border : 1px solid red;
-    padding : $GlobalPadding;
+    @include resetSpacing;
+    padding : 15px 20px 0;
+    float : left;
+    
+    li a {
+        padding : 0 1.5em;
+        color : $White;
+        &:hover {
+          color : $Black;
+        }
+     } 
+     
+     ul + ul {
+       padding-top : 23px !important;
+     }   
   }
   
   #sitemap > li {
-    border : 1px solid blue;
     display : inline-block;
     float : left;
-    font-size : $GlobalLinkSize;
+    height : 160px;
+    margin : 0;
+    font-size : $GlobalLinkSize - 0.1;
+    border-right : 1px dotted $White;
+    &:last-child {
+      border-right : none;
+    }
+  }
+
+  #sitemap > li > a {
+    font-weight: 600;
+    color : $White;
   }
   
+  #sitemap > li ul {
+    @include resetSpacing;
+  }
+  
+  #sitemap > li > ul > li  {
+    clear : both;
+    padding : 0;
+  }  
+  
+  .right-column {
+    width : 180px;
+    float : right; 
+    padding : 0 0.7em;
+  }
+
+  #footer nav .right-column {
+    border-left : 1px dotted $White;
+    margin-top : 15px ;
+    height : 160px;
+  }
+
   /* PAGE SPECIFIC */
   
-  // ^4b home
+  // ^4b HOME
   .home #wrapper {
     background : $MediumBlack;
   }
@@ -355,3 +444,13 @@
     padding : $GlobalPadding;
   }
   
+/* ^5  TEXT
+*************************************************************************/
+  h1, h2, h3 , h4, h5, h6 {
+    font-weight : normal;
+  }
+  
+  h6 {
+    @include resetSpacing;
+    font-size : $GlobalLinkSize - 0.1;
+  }
