--- a/css/single.css
+++ b/css/single.css
@@ -87,10 +87,11 @@ button[type=submit] {
         font-weight: normal; }
 
 #LeftInfo {
-  padding-bottom: 10px;
   position: absolute;
-  bottom: 0;
-  width: 190px;
+  top: -210px;
+  width: 210px;
+  height: 210px;
+  padding: 20px;
   font-family: "Century", Georgia, "Times New Roman", Times, serif; }
   #LeftInfo h4 {
     color: #ff6600;
@@ -261,7 +262,7 @@ button[type=submit] {
       color: white; }
 
 #RightSidebar {
-  float: left;
+  float: right;
   padding: 20px 30px 30px;
   position: relative;
   width: 165px; }
@@ -317,3 +318,9 @@ button[type=submit] {
       padding: 0.35em 0; }
       #LatestNews ul li a:hover {
         color: #ff6600; }
+
+.sidebar-panel {
+  position: absolute;
+  height: 100%;
+  width: 250px;
+  background: #333333; }
